# Pico-MIDI-to-HID

./: CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
